# css_inspector

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  false-positives.md  update_fixtures.sh  validate_fixtures.sh
.github/: FUNDING.yml
.github/workflows/: rust.yml
crates/css_inspector/: Cargo.toml  README.md
crates/css_inspector/data/css_properties/: CSS3Properties.properties  CSS3SVGProperties.properties  CSS4Properties.properties  local_additions.json
crates/css_inspector/src/: config.rs  declarations.rs  errors.rs  fetcher.rs  imports.rs  known_properties.rs  lib.rs  parser.rs  report.rs  selectors.rs  strutil.rs  tests.rs  url.rs  validator.rs
crates/css_inspector/src/declarations/: at_rule_descriptors.rs  background.rs  border.rs  borders.rs  colors.rs  fonts.rs  grid.rs  misc.rs  numbers.rs  syntax.rs  tests.rs  url_function.rs  wide_keywords.rs
crates/css_inspector/src/tests/: ascii.rs  at_rule_descriptor_blocks.rs  at_rule_detection.rs  at_rules.rs  clip.rs  comments.rs  imports.rs  mod.rs  profiles.rs  properties.rs  real_world.rs  rule_blocks.rs
crates/css_inspector_cli/: Cargo.toml
crates/css_inspector_suite/: Cargo.toml
data/css_properties/: CSS3Properties.properties  CSS4Properties.properties  SVGProperties.properties  local_additions.json
data/w3c/: all-properties.en.json
fixtures/wpt_css_style_results/: _meta.md
scripts/: extract_autotest_manifest.py  generate_css4_properties_data.py  update_css_properties_data.py  update_w3c_all_properties_data.py
test_results/: autotest_manifest.jsonl
(+38928 files in other folders)
