[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.93"
repository = "https://github.com/Auto-Explore/css_inspector"
homepage = "https://github.com/Auto-Explore/css_inspector"

[workspace.dependencies]
rustc-hash = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
