[package]
name = "css_inspector"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Suite-driven, conservative CSS validator."
readme = "README.md"
keywords = ["css", "validator", "lint", "web"]
categories = ["parser-implementations", "web-programming"]

[dependencies]
rustc-hash.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
